--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "codeigniter-socket",
+  "name": "ci_socket",
   "version": "1.0.0",
-  "description": "learning about codeigniter, socket io and redis for realtime data",
-  "main": "index.js",
+  "description": "pairing typescript with codeigniter",
+  "main": "./public/js/hello-world.ts",
   "directories": {
     "test": "tests"
   },
+  "dependencies": {
+    "cross-env": "^5.2.0",
+    "gulp-cli": "^2.0.1",
+    "ts-loader": "^4.4.2"
+  },
+  "devDependencies": {
+    "browserify": "^16.2.2",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "tsify": "^4.0.0",
+    "typescript": "^2.9.2",
+    "vinyl-source-stream": "^2.0.0"
+  },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ekapasha17/code_ts.git"
   },
   "author": "eka pasha",
   "license": "ISC",
-  "devDependencies": {
-    "browser-sync": "^2.24.5",
-    "browser-sync-webpack-plugin": "^2.0.1",
-    "cross-env": "^5.2.0",
-    "laravel-mix": "^2.1.11",
-    "node-sass": "^4.9.2"
+  "bugs": {
+    "url": "https://github.com/ekapasha17/code_ts/issues"
   },
-  "dependencies": {
-    "ts-loader": "^4.4.2",
-    "typescript": "^2.9.2"
-  }
+  "homepage": "https://github.com/ekapasha17/code_ts#readme"
 }
