--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,27 @@
-/*{
-    "files": [
-        "assets/js/hello-world.ts"
-    ],
-    "compilerOptions": {
-        "noImplicitAny": true,
-        "target": "es5"
-    }
-}*/
-
 {
     "files": [
-        "assets/js/hello-world.ts"
+        "assets/js/*.ts"
     ],
     "compilerOptions": {
-        "target": "es5",
+        "target": "es2015",
         "module": "commonjs",
         //"moduleResolution": "node",
-        "lib": [ "es2015", "dom" ],
-        "outDir": "./public/js",
+        //"lib": [ "es2015", "dom" ],
+        //"outDir": "./public/js",
         "removeComments": true,
-        "noImplicitAny": true
+        "noImplicitAny": false,
         /*"suppressImplicitAnyIndexErrors": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "sourceMap": true,
+        "sourceMap": true,*/
         "typeRoots": [
-          "../node_modules/@types/"
-        ]*/
+          "node_modules/@types/"
+        ]
     },
     "include": [
-        "./assets/**/*.ts"
+        "assets/**/*.ts"
     ],
     "exclude": [
-        "../node_modules"
+        "node_modules"
     ]
 }
